--- a/02. model-view-controller/workbook 2.1/solution/workbook/pom.xml
+++ b/02. model-view-controller/workbook 2.1/solution/workbook/pom.xml
@@ -26,6 +26,11 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		
 
 		<dependency>
@@ -37,8 +42,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+			<scope>runtime
 	</dependencies>
 
 	<build>
